k8s/arr-stack/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr-stack
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: rinzler
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: downloads
          mountPath: /downloads
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      volumes:
      - name: config
        hostPath:
          path: /var/lib/docker/volumes/radarr_data/_data
          type: Directory
      - name: media
        hostPath:
          path: /storage/media
          type: Directory
      - name: downloads
        hostPath:
          path: /storage/downloads
          type: Directory
